# kdev-msvc

./: CMakeLists.txt  README.md  debug.cpp  debug.h  devenvjob.cpp  devenvjob.h  kdevmsvcmanager.json  msvcbuilder.cpp  msvcbuilder.h  msvcbuilderpreferences.cpp  msvcbuilderpreferences.h  msvcconfig.cpp  msvcconfig.h  msvcconfig.ui  msvcimportjob.cpp  msvcimportjob.h  msvcmanager.cpp  msvcmanager.h  msvcmodelitems.cpp  msvcmodelitems.h  msvcprojectconfig.cpp  msvcprojectconfig.h  msvcprojectparser.cpp  msvcprojectparser.h
